--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,16 +205,16 @@ body {
 
 
 .natdes1 {
-	background-image:  url(../img/projdig.png)
+	background-image:  url(../img/eletronica_cat.jpg)
 }
 .natdes2 {
-	background-image:  url(../img/projdig.png)
+	background-image:  url(../img/natdes2.jpg)
 }
 .acionas {
-	background-image:  url(../img/projdig.png)
+	background-image:  url(../img/eletronica_cat.jpg)
 }
 .instrumed {
-	background-image:  url(../img/projdig.png)
+	background-image:  url(../img/eletronica_cat.jpg)
 }
 .cdados1{
 	background-image:  url(../img/projdig.png);
